FIX: Update horizontal site padding on mobile

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -84,7 +84,13 @@ a:hover {
     margin-inline: auto;
     display: flex;
     flex-direction: column;
-    padding: 2rem $site-padding;
+    padding: 2rem $site-padding-mobile;
+}
+
+@media (min-width: 768px) {
+    .site-container {
+        padding: 2rem $site-padding;
+    }
 }
 
 h1,
