--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,2 +1,3 @@
 $site-max-width: 45rem;
 $site-padding: 1.5rem;
+$site-padding-mobile: 0.75rem;
